// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the UserDetail component should not render 0 for user not owning any product. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="flex flex-col lg:flex-row justify-between pb-8"
      >
        <div
          class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
        >
          <div
            class="pb-4 flex"
          >
            <a
              class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
              data-testid="edit-link"
              href="/users/undefined/edit"
            >
              <svg
                class="inline pb-0.5"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h9"
                />
                <path
                  d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                />
              </svg>
              <span
                class="text-sm px-1"
              >
                Edit
              </span>
            </a>
          </div>
          <div
            class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
          >
            <div
              class="flex flex-col h-80 p-4"
            >
              <div
                class="m-auto align-middle w-48"
              >
                <img
                  alt="Logo for: Some User"
                  class="w-24 m-auto"
                  src="/icons/user.svg"
                />
              </div>
              <div
                class="text-sm text-center text-dial-gray-dark"
              >
                Email
                 : 
                some_user@some-website.com
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full lg:w-2/3 xl:w-3/4 flex flex-col"
        >
          <div
            class="hidden lg:block"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                User Profile
                :
              </div>
              <div>
                Some User
              </div>
            </div>
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                Roles
                :
              </div>
              <div>
                ORG_USER
              </div>
            </div>
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                Organization
                :
              </div>
              <div>
                Some Organization
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="flex flex-col lg:flex-row justify-between pb-8"
    >
      <div
        class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
      >
        <div
          class="pb-4 flex"
        >
          <a
            class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
            data-testid="edit-link"
            href="/users/undefined/edit"
          >
            <svg
              class="inline pb-0.5"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 20h9"
              />
              <path
                d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
              />
            </svg>
            <span
              class="text-sm px-1"
            >
              Edit
            </span>
          </a>
        </div>
        <div
          class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
        >
          <div
            class="flex flex-col h-80 p-4"
          >
            <div
              class="m-auto align-middle w-48"
            >
              <img
                alt="Logo for: Some User"
                class="w-24 m-auto"
                src="/icons/user.svg"
              />
            </div>
            <div
              class="text-sm text-center text-dial-gray-dark"
            >
              Email
               : 
              some_user@some-website.com
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full lg:w-2/3 xl:w-3/4 flex flex-col"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col gap-3"
        >
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              User Profile
              :
            </div>
            <div>
              Some User
            </div>
          </div>
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              Roles
              :
            </div>
            <div>
              ORG_USER
            </div>
          </div>
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              Organization
              :
            </div>
            <div>
              Some Organization
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unit test for the UserDetail component should render element of basic user not owning product or organization. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="flex flex-col lg:flex-row justify-between pb-8"
      >
        <div
          class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
        >
          <div
            class="pb-4 flex"
          >
            <a
              class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
              data-testid="edit-link"
              href="/users/undefined/edit"
            >
              <svg
                class="inline pb-0.5"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h9"
                />
                <path
                  d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                />
              </svg>
              <span
                class="text-sm px-1"
              >
                Edit
              </span>
            </a>
          </div>
          <div
            class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
          >
            <div
              class="flex flex-col h-80 p-4"
            >
              <div
                class="m-auto align-middle w-48"
              >
                <img
                  alt="Logo for: Some User"
                  class="w-24 m-auto"
                  src="/icons/user.svg"
                />
              </div>
              <div
                class="text-sm text-center text-dial-gray-dark"
              >
                Email
                 : 
                some_user@some-website.com
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full lg:w-2/3 xl:w-3/4 flex flex-col"
        >
          <div
            class="hidden lg:block"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                User Profile
                :
              </div>
              <div>
                Some User
              </div>
            </div>
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                Roles
                :
              </div>
              <div>
                USER
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="flex flex-col lg:flex-row justify-between pb-8"
    >
      <div
        class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
      >
        <div
          class="pb-4 flex"
        >
          <a
            class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
            data-testid="edit-link"
            href="/users/undefined/edit"
          >
            <svg
              class="inline pb-0.5"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 20h9"
              />
              <path
                d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
              />
            </svg>
            <span
              class="text-sm px-1"
            >
              Edit
            </span>
          </a>
        </div>
        <div
          class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
        >
          <div
            class="flex flex-col h-80 p-4"
          >
            <div
              class="m-auto align-middle w-48"
            >
              <img
                alt="Logo for: Some User"
                class="w-24 m-auto"
                src="/icons/user.svg"
              />
            </div>
            <div
              class="text-sm text-center text-dial-gray-dark"
            >
              Email
               : 
              some_user@some-website.com
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full lg:w-2/3 xl:w-3/4 flex flex-col"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col gap-3"
        >
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              User Profile
              :
            </div>
            <div>
              Some User
            </div>
          </div>
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              Roles
              :
            </div>
            <div>
              USER
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unit test for the UserDetail component should render element of the user owning product. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="flex flex-col lg:flex-row justify-between pb-8"
      >
        <div
          class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
        >
          <div
            class="pb-4 flex"
          >
            <a
              class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
              data-testid="edit-link"
              href="/users/undefined/edit"
            >
              <svg
                class="inline pb-0.5"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h9"
                />
                <path
                  d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                />
              </svg>
              <span
                class="text-sm px-1"
              >
                Edit
              </span>
            </a>
          </div>
          <div
            class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
          >
            <div
              class="flex flex-col h-80 p-4"
            >
              <div
                class="m-auto align-middle w-48"
              >
                <img
                  alt="Logo for: Some User"
                  class="w-24 m-auto"
                  src="/icons/user.svg"
                />
              </div>
              <div
                class="text-sm text-center text-dial-gray-dark"
              >
                Email
                 : 
                some_user@some-website.com
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full lg:w-2/3 xl:w-3/4 flex flex-col"
        >
          <div
            class="hidden lg:block"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                User Profile
                :
              </div>
              <div>
                Some User
              </div>
            </div>
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                Roles
                :
              </div>
              <div>
                ORG_USER, PRODUCT_USER
              </div>
            </div>
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                Products
                :
              </div>
              <div>
                Some Product
              </div>
            </div>
            <div
              class="flex flex-row gap-2"
            >
              <div
                class="font-semibold"
              >
                Organization
                :
              </div>
              <div>
                Some Organization
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="flex flex-col lg:flex-row justify-between pb-8"
    >
      <div
        class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
      >
        <div
          class="pb-4 flex"
        >
          <a
            class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
            data-testid="edit-link"
            href="/users/undefined/edit"
          >
            <svg
              class="inline pb-0.5"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 20h9"
              />
              <path
                d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
              />
            </svg>
            <span
              class="text-sm px-1"
            >
              Edit
            </span>
          </a>
        </div>
        <div
          class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
        >
          <div
            class="flex flex-col h-80 p-4"
          >
            <div
              class="m-auto align-middle w-48"
            >
              <img
                alt="Logo for: Some User"
                class="w-24 m-auto"
                src="/icons/user.svg"
              />
            </div>
            <div
              class="text-sm text-center text-dial-gray-dark"
            >
              Email
               : 
              some_user@some-website.com
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full lg:w-2/3 xl:w-3/4 flex flex-col"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col gap-3"
        >
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              User Profile
              :
            </div>
            <div>
              Some User
            </div>
          </div>
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              Roles
              :
            </div>
            <div>
              ORG_USER, PRODUCT_USER
            </div>
          </div>
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              Products
              :
            </div>
            <div>
              Some Product
            </div>
          </div>
          <div
            class="flex flex-row gap-2"
          >
            <div
              class="font-semibold"
            >
              Organization
              :
            </div>
            <div>
              Some Organization
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
